Fixed overflow issue on code

--- a/kii/glue/static/default/glue/scss/app.scss
+++ b/kii/glue/static/default/glue/scss/app.scss
@@ -63,7 +63,7 @@ code.code {
     font-size: 1rem;
     padding: 0.5rem;
     margin: 2rem 0;
-    overflow-x: scroll;
+    overflow-x: auto;
 }
 // icons
 
